# EuropPythie

./: .gitignore  EuroPythie.sqlite  README.md  config-exemple.toml  pyproject.toml
euro_pythie/: __main__.py  config.py  database.py  game.py  log.py  main.py
